update longhorn values

--- a/app-of-apps/charts/longhorn/values.yaml
+++ b/app-of-apps/charts/longhorn/values.yaml
@@ -8,6 +8,9 @@ chart:
   version: 1.10.0
 
 helmValues:
+  preUpgradeChecker:
+    jobEnabled: false
+    
   persistence:
     defaultClass: true
     defaultClassReplicaCount: 1
