--- a/apps/namespaces/namespaces.yaml
+++ b/apps/namespaces/namespaces.yaml
@@ -17,3 +17,9 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: longhorn-system
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kgateway-system
+
