--- a/app-of-apps/charts/kgateway-crds/values.yaml
+++ b/app-of-apps/charts/kgateway-crds/values.yaml
@@ -3,5 +3,6 @@ namespace: kgateway-system
 syncWave: "-900"
 
 chart:
-  repoURL: oci://cr.kgateway.dev/kgateway-dev/charts/kgateway-crds
+  repoURL: oci://cr.kgateway.dev/kgateway-dev/charts
+  name: kgateway-crds
   version: v2.1.1
