fix gateway name

--- a/app-of-apps/charts/kube-prometheus-stack/values.yaml
+++ b/app-of-apps/charts/kube-prometheus-stack/values.yaml
@@ -38,7 +38,7 @@ helmValues:
       main:
         enabled: true
         parentRefs:
-          - name: agentgateway
+          - name: http
             namespace: kgateway-system
         hostnames:
           - prometheus.lan
