--- a/apps/kgateway-gateways/agentgateway.yaml
+++ b/apps/kgateway-gateways/agentgateway.yaml
@@ -1,13 +1,13 @@
 kind: Gateway
 apiVersion: gateway.networking.k8s.io/v1
 metadata:
-  name: http
+  name: agentgateway
   namespace: kgateway-system
 spec:
   gatewayClassName: agentgateway
   listeners:
   - protocol: HTTP
-    port: 8080
+    port: 80
     name: http
     allowedRoutes:
       namespaces:
