--- a/app-of-apps/charts/cert-manager/values.yaml
+++ b/app-of-apps/charts/cert-manager/values.yaml
@@ -16,7 +16,8 @@ helmValues:
       enabled: true
 
   extraObjects:
-    - apiVersion: cert-manager.io/v1
+    - |
+      apiVersion: cert-manager.io/v1
       kind: ClusterIssuer
       metadata:
         name: letsencrypt-cloudflare
@@ -33,7 +34,8 @@ helmValues:
                   name: cloudflare-api-token
                   key: api-token
 
-    - apiVersion: cert-manager.io/v1
+    - |
+      apiVersion: cert-manager.io/v1
       kind: Certificate
       metadata:
         name: wildcard-tmdev-pl
