--- a/app-of-apps/charts/prowlarr/values.yaml
+++ b/app-of-apps/charts/prowlarr/values.yaml
@@ -22,3 +22,8 @@ helmValues:
       storageClass: longhorn
       size: 1Gi
       retain: true
+
+  podSecurityContext:
+    fsGroup: 1000
+    runAsUser: 1000
+    runAsGroup: 1000
