fix sonarr write perms

--- a/app-of-apps/charts/sonarr/values.yaml
+++ b/app-of-apps/charts/sonarr/values.yaml
@@ -21,9 +21,13 @@ helmValues:
       storageClass: longhorn
       size: 5Gi
       retain: true
-
     media:
       enabled: true
       existingClaim: media-nfs-pvc
       mountPath: /media
       subPath: tv
+
+  podSecurityContext:
+    fsGroup: 1000
+    runAsUser: 1000
+    runAsGroup: 1000
