add downloads pvc to sonarr

--- a/app-of-apps/charts/sonarr/values.yaml
+++ b/app-of-apps/charts/sonarr/values.yaml
@@ -21,6 +21,11 @@ helmValues:
       storageClass: longhorn
       size: 5Gi
       retain: true
+    downloads:
+      enabled: true
+      existingClaim: media-nfs-pvc
+      mountPath: /downloads
+      subPath: downloads
     media:
       enabled: true
       existingClaim: media-nfs-pvc
