change qbittorrent image

--- a/app-of-apps/charts/servarr/values.yaml
+++ b/app-of-apps/charts/servarr/values.yaml
@@ -9,6 +9,10 @@ chart:
 helmValues:
   qbittorrent:
     enabled: true
+    image:
+      repository: ghcr.io/linuxserver/qbittorrent
+      pullPolicy: IfNotPresent
+      tag: 5.1.2
     env:
       TZ: "Europe/Warsaw"
     persistence:
