enable sonarr in servarr

--- a/app-of-apps/charts/servarr/values.yaml
+++ b/app-of-apps/charts/servarr/values.yaml
@@ -39,9 +39,7 @@ helmValues:
       size: 1Gi
 
   sonarr:
-    enabled: false
-    image:
-      tag: "4.0.16"
+    enabled: true
     env:
       TZ: "Europe/Warsaw"
     persistence:
