try with changed cache dir

--- a/app-of-apps/charts/servarr/values.yaml
+++ b/app-of-apps/charts/servarr/values.yaml
@@ -9,6 +9,11 @@ chart:
 helmValues:
   jellyfin:
     enabled: true
+    extraEnvVars:
+      - name: TZ
+        value: "Europe/Warsaw"
+      - name: JELLYFIN_CACHE_DIR
+        value: "/tmp/jellyfin-cache"
     persistence:
       config:
         enabled: true
