--- a/app-of-apps/charts/servarr/values.yaml
+++ b/app-of-apps/charts/servarr/values.yaml
@@ -9,6 +9,8 @@ chart:
 helmValues:
   jellyfin:
     enabled: true
+    image:
+      tag: 10.11.3
     persistence:
       config:
         enabled: true
