disable grafana initChwonData

--- a/app-of-apps/charts/kube-prometheus-stack/values.yaml
+++ b/app-of-apps/charts/kube-prometheus-stack/values.yaml
@@ -25,6 +25,8 @@ helmValues:
       size: 10Gi
       accessModes:
         - ReadWriteOnce
+    initChownData:
+      enabled: false
     grafana.ini:
       auth:
         disable_login_form: true
