--- a/app-of-apps/charts/servarr/values.yaml
+++ b/app-of-apps/charts/servarr/values.yaml
@@ -18,7 +18,7 @@ helmValues:
         size: 5Gi
       media:
         enabled: true
-        existingClaim: media-nfs-pvc
+        existingClaim: media-pvc
     extraVolumeMounts:
       - name: transcodes
         mountPath: /config/cache/transcodes
