--- a/apps/media-pv/media-pv.yaml
+++ b/apps/media-pv/media-pv.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: media-nfs-pv
+  name: media-pv
 spec:
   capacity:
     storage: 3Ti
+  volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: ""
-  nfs:
-    server: 192.168.178.4
-    path: /mnt/hdd-pool/media
+  storageClassName: "local-storage"
+  hostPath:
+    path: /mnt/media_root
