--- a/apps/media-pv/media-pvc.yaml
+++ b/apps/media-pv/media-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: media-nfs-pvc
+  name: media-pvc
   namespace: media
 spec:
   accessModes:
@@ -9,5 +9,5 @@ spec:
   resources:
     requests:
       storage: 3Ti
-  storageClassName: ""
-  volumeName: media-nfs-pv
+  storageClassName: "local-storage"
+  volumeName: media-pv
