change local-path exporter config

--- a/app-of-apps/charts/local-path-exporter/values.yaml
+++ b/app-of-apps/charts/local-path-exporter/values.yaml
@@ -8,6 +8,8 @@ chart:
   version: 0.1.0
 
 helmValues:
+  config:
+    metricTemplate: "pvc-*_{pvc_namespace}_{pvc_name}"
   serviceMonitor:
     enabled: true
     labels:
