--- a/app-of-apps/charts/kube-prometheus-stack/values.yaml
+++ b/app-of-apps/charts/kube-prometheus-stack/values.yaml
@@ -27,16 +27,12 @@ helmValues:
         - ReadWriteOnce
     initChownData:
       enabled: false
-    grafana.ini:
-      auth:
-        disable_login: true
-        disable_login_form: true
-        disable_signout_menu: true
-      auth.anonymous:
-        enabled: true
-        org_role: Admin
-      users:
-        allow_sign_up: false
+    env:
+      GF_AUTH_DISABLE_LOGIN_FORM: "true"
+      GF_AUTH_DISABLE_SIGNOUT_MENU: "true"
+      GF_AUTH_ANONYMOUS_ENABLED: "true"
+      GF_AUTH_ANONYMOUS_ORG_ROLE: "Admin"
+      GF_USERS_ALLOW_SIGN_UP: "false"
 
   prometheus:
     route:
