--- a/app-of-apps/charts/kube-prometheus-stack/values.yaml
+++ b/app-of-apps/charts/kube-prometheus-stack/values.yaml
@@ -33,6 +33,7 @@ helmValues:
       GF_AUTH_ANONYMOUS_ENABLED: "true"
       GF_AUTH_ANONYMOUS_ORG_ROLE: "Admin"
       GF_USERS_ALLOW_SIGN_UP: "false"
+      GF_SECURITY_DISABLE_BRUTE_FORCE_LOGIN_PROTECTION: "true"
 
   prometheus:
     route:
